# vecRecall

./: .gitignore  LICENSE  README.md  README_BLOCKCHAIN.md  README_EN.md  pyproject.toml
tests/: test_blockchain.py  test_core.py
vecrecall/: __init__.py
vecrecall/blockchain/: __init__.py  block.py  chain.py  hooks.py  indexer.py
vecrecall/cli/: main.py
vecrecall/core/: engine.py
vecrecall/mcp/: server.py
