[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vecrecall"
version = "1.0.4"
description = "改进版 AI 长期记忆系统：检索与组织解耦，纯语义向量检索，四层记忆栈"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = []

[project.optional-dependencies]
chroma = ["chromadb>=0.5"]
sentence = ["sentence-transformers>=3.0"]
full = ["chromadb>=0.5", "sentence-transformers>=3.0"]

[project.scripts]
vr = "vecrecall.cli.main:main"
vr-mcp = "vecrecall.mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vecrecall*"]
